Refactor Employee class to record and update filtering